--- a/mine.html
+++ b/mine.html
@@ -10,21 +10,21 @@
 </head>
 
 <body>
-    <div class="board">
-        <div class="tile covered-tile">
-
-        </div>
-        <div class="tile empty-tile">
-
-        </div>
-        <div class="tile">
-            2
-        </div>
-        <div class="tile bomb-tile">
-
+    <div class="container">
+        <div class="game-container">
+            <div class="control-panel">
+                <div class="play-pause-btn control-btn" id="playPauseBtn">
+                    <img src="images/play-icon.svg" alt="" width="20px">
+                </div>
+                <div class="end-game-btn control-btn" id="endGameBtn">
+                    <img src="images/x-icon.svg" alt="" width="20px">
+                </div>
+            </div>
+            <div class="board" id="board">
+            </div>
         </div>
     </div>
-
+    <script src='main.js'></script>
 </body>
 
 </html>
