--- a/mine.html
+++ b/mine.html
@@ -12,16 +12,35 @@
 <body>
     <div class="container">
         <div class="game-container">
-        <div class="control-panel">
-            <div class="play-pause-btn control-btn" id="playPauseBtn">
-                <img src="images/play-icon.svg" alt="" width="20px">
+            <div class="board-head">
+                <div class="control-panel">
+                    <div class="play-pause-btn control-btn" id="playPauseBtn">
+                        <img src="images/play-icon.svg" alt="" width="20px">
+                    </div>
+                    <div class="end-game-btn control-btn" id="endGameBtn">
+                        <img src="images/x-icon.svg" alt="" width="20px">
+                    </div>
+                </div>
+                <div class="bomb-counter-container">
+                    <img src="images/flag-icon.svg" alt="">
+                    <span id="bombCounter">10</span>
+                </div>
+                <h2 id='timer'>00:00</h2>
             </div>
-            <div class="end-game-btn control-btn" id="endGameBtn">
-                <img src="images/x-icon.svg" alt="" width="20px">
+            <div class="board" id="board" oncontextmenu="return false">
             </div>
         </div>
-        <div class="board" id="board" oncontextmenu="return false">
-        </div></div>
+        <div class="main-menue">
+            <h1 id="gameResult">Minesweeper</h1>
+            <select id="difficulty">
+                <option value="easy">Easy</option>
+                <option value="medium">Medium</option>
+                <option value="hard">Hard</option>
+            </select>
+            <div class="new-game-btn" id="newGameBtn">
+                new game
+            </div>
+        </div>
     </div>
     <script type="module" src='main.js'></script>
 </body>
