--- a/mine.html
+++ b/mine.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mine.css">
     <title>Minesweeper</title>
 </head>
 
@@ -40,10 +40,10 @@
             <div class="new-game-btn" id="newGameBtn">
                 new game
             </div>
-            <!-- <a href="" class="continue" id="continueBtn">CONTINUE</a> -->
+            <div class="continue-btn" id="continueBtn">CONTINUE</div>
         </div>
     </div>
-    <script type="module" src='main.js'></script>
+    <script type="module" src='mine.js'></script>
 </body>
 
 </html>
